--- a/app/assets/stylesheets/objects/grid.scss
+++ b/app/assets/stylesheets/objects/grid.scss
@@ -19,6 +19,10 @@
   justify-content: center;
 }
 
+.o-grid--justify-center {
+  justify-content: center;
+}
+
 .o-grid--column {
   flex-direction: column;
 }
