--- a/app/assets/stylesheets/components/link.scss
+++ b/app/assets/stylesheets/components/link.scss
@@ -23,8 +23,8 @@
   min-width: rythm(40);
 }
 
-.c-list-items__item {
-  margin-bottom: rythm(1);
+.c-link__list--short {
+  min-width: rythm(3);
 }
 
 .c-link__list--left-arrow {
