--- a/app/assets/stylesheets/components/list.scss
+++ b/app/assets/stylesheets/components/list.scss
@@ -3,3 +3,11 @@
 .c-list-items {
   margin-top: rythm(2);
 }
+
+.c-list-items__item {
+  margin-bottom: rythm(1);
+}
+
+.c-list-items__group-cheatsheet {
+  background-color: $lightest;
+}
