--- a/app/views/scenarios/_edit_scenario.html.erb
+++ b/app/views/scenarios/_edit_scenario.html.erb
@@ -1,7 +1,7 @@
 <div data-edit-scenario-target="editingScenarioWrapper" class='o-container o-grid o-grid--column c-card__edit u-display__none'>
   <%= scenario_form.text_field :content, class: 'c-input' %>
   <%= scenario_form.rich_text_area :example, class: 'c-input u-margin__bottom--1' %>
-  <div class="o-wrapper-scenario-buttons-edit">
+  <div class="o-grid o-grid--no-wrap">
     <%= scenario_form.submit 'Update', class: 'c-button c-button-submit u-margin__right--1' %>
     <button data-action="click->edit-scenario#cancelEditing" } class='c-button c-button-submit u-margin__left--1'>Cancel</button>
   </div>
