cookie flash styled

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@
 @import 'components/button';
 @import 'components/list';
 @import 'components/card';
+@import 'components/flash';
 
 //  utilities -widths, sizes, active- basically anything that you want to lay on top of the component
 @import 'utilities/padding';
