--- a/app/views/notifications/_cookie.html.erb
+++ b/app/views/notifications/_cookie.html.erb
@@ -2,12 +2,12 @@
 <% flash.each do |type, message| %>
   <div data-controller="message" >
     <% if type == 'alert' %>
-    <div data-message-target="cookie" class='e-flash u-flash--alert'>
+    <div data-message-target="cookie" class='c-flash c-flash--alert'>
       <%= message %>
     </div>
     <% end %>
     <% if type == 'notice' %>
-    <div data-message-target="cookie" class='e-flash u-flash--notice'>
+    <div data-message-target="cookie" class='c-flash c-flash--notice'>
       <%= message %>
     </div>
     <% end %>
