--- a/app/assets/stylesheets/objects/grid.scss
+++ b/app/assets/stylesheets/objects/grid.scss
@@ -23,6 +23,10 @@
   justify-content: center;
 }
 
+.o-grid--align-center {
+  align-items: center;
+}
+
 .o-grid--column {
   flex-direction: column;
 }
