--- a/app/assets/stylesheets/actiontext.scss
+++ b/app/assets/stylesheets/actiontext.scss
@@ -54,6 +54,10 @@ trix-toolbar {
     height: 1.2em;
     background-color: white;
   }
+
+  .trix-button-row {
+    flex-wrap: wrap;
+  }
 } 
 
 trix-editor {
