--- a/app/assets/stylesheets/objects/container.scss
+++ b/app/assets/stylesheets/objects/container.scss
@@ -9,6 +9,12 @@
   max-width: 600px;
 }
 
+@media only screen and (max-width: 800px) {
+  .o-container--narrow {
+    max-width: 80%;
+  }
+}
+
 .o-container--medium {
   max-width: 80%;
 }
